--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   .image4 { top: 360px; right: 10px; }
 
         /* Show images when hovering over the link */
-  .title:hover .image-container img {
+  .title2:hover .image-container img {
     display: block;
         }
 
