--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <!-- CHATGPT HELP PART 2: https://chatgpt.com/share/67a05b6d-4630-8007-bf5f-c4288176f8eb -->
 
+<!-- CHATGPT HELP PART 3: https://chatgpt.com/share/67a178fe-b804-8007-8d75-1bed8a085a08 -->
+
 
 <style>
 
@@ -105,7 +107,7 @@
     font-size: 20px;
     color: white;
     opacity: 0; /* Start invisible */ 
-    animation: appearFlash 1s ease-in-out 3s forwards;
+    animation: appearFlash 1s ease-in-out 4s forwards;
   }
   
   #messag {
@@ -134,7 +136,7 @@
 
   <div class="messa">
     <p id="mess">
-      You have <a id="messag" href="https://manuelapinheiro.github.io/letter2/" target="_blank"> one (1) new message!</a>
+      You have <a id="messag" href="https://manuelapinheiro.github.io/letter3/" target="_blank"> one (1) new message!</a>
   </p>
   
   </div>
